--- a/src/Presentation/FriendsOrganizer.UI/Views/MainWindow.xaml
+++ b/src/Presentation/FriendsOrganizer.UI/Views/MainWindow.xaml
@@ -5,8 +5,68 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FriendsOrganizer.UI.Views"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Friends Organizer" 
+        Height="450"
+        Width="600"
+        FontSize="20">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="200"></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <ListView
+            ItemsSource="{Binding Friends}"
+            SelectedItem="{Binding SelectedFriend, Mode=TwoWay}"
+            DisplayMemberPath="FirstName"/>
+        <Grid Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition ></RowDefinition>
+            </Grid.RowDefinitions>
 
+            <Label 
+                Content="First Name"
+                Margin="10,10,10,0"
+                />
+            <TextBox 
+                Grid.Row="1" 
+                Margin="10,0,10,10"
+                Text="{Binding SelectedFriend.FirstName, 
+                    Mode=TwoWay, 
+                    UpdateSourceTrigger=PropertyChanged}"
+                />
+
+            <Label 
+                Grid.Row="2" 
+                Content="Last Name"
+                Margin="10,0"
+                />
+            <TextBox 
+                Grid.Row="3" 
+                Margin="10,0,10,10"
+                Text="{Binding SelectedFriend.LastName, 
+                    Mode=TwoWay, 
+                    UpdateSourceTrigger=PropertyChanged}"
+                />
+
+            <Label 
+                Grid.Row="4" 
+                Content="Email"
+                Margin="10,0"
+                />
+            <TextBox 
+                Grid.Row="5" 
+                Margin="10,0,10,10"
+                Text="{Binding SelectedFriend.Email, 
+                    Mode=TwoWay, 
+                    UpdateSourceTrigger=PropertyChanged}"
+                />
+
+        </Grid>
     </Grid>
 </Window>
