Publishing Event on Selected Friend from Navigation

--- a/src/Presentation/FriendsOrganizer.UI/Views/NavigationUserControl.xaml
+++ b/src/Presentation/FriendsOrganizer.UI/Views/NavigationUserControl.xaml
@@ -8,6 +8,7 @@
     <Grid>
         <ListView
             ItemsSource="{Binding Friends}"
+            SelectedItem="{Binding SelectedFriend}"
             DisplayMemberPath="DisplayProperty"/>
     </Grid>
 </UserControl>
