Subscribe to Open Friend From Navigation to details

--- a/src/Presentation/FriendsOrganizer.UI/Views/NavigationUserControl.xaml
+++ b/src/Presentation/FriendsOrganizer.UI/Views/NavigationUserControl.xaml
@@ -8,7 +8,7 @@
     <Grid>
         <ListView
             ItemsSource="{Binding Friends}"
-            SelectedItem="{Binding SelectedFriend}"
+            SelectedItem="{Binding SelectedFriend, Mode=TwoWay}"
             DisplayMemberPath="DisplayProperty"/>
     </Grid>
 </UserControl>
