--- a/src/Presentation/FriendsOrganizer.UI/Views/FriendDetailUserControl.xaml
+++ b/src/Presentation/FriendsOrganizer.UI/Views/FriendDetailUserControl.xaml
@@ -15,6 +15,7 @@
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition ></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
 
         <Label 
@@ -55,5 +56,10 @@
                     UpdateSourceTrigger=PropertyChanged}"
                 />
 
+        <StackPanel Grid.Row="7">
+            <Button Content="Save"
+                    Margin="10"
+                    Command="{Binding SaveCommand}"/>
+        </StackPanel>
     </Grid>
 </UserControl>
