Display Programming Languages

--- a/src/Presentation/FriendsOrganizer.UI/Views/FriendDetailUserControl.xaml
+++ b/src/Presentation/FriendsOrganizer.UI/Views/FriendDetailUserControl.xaml
@@ -14,6 +14,8 @@
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition ></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
@@ -56,7 +58,20 @@
                     UpdateSourceTrigger=PropertyChanged}"
                 />
 
-        <StackPanel Grid.Row="7"
+        <Label
+            Grid.Row="6"
+            Content="Favorite Programming Language"
+            Margin="10,0"/>
+        <ComboBox
+            Grid.Row="7"
+            Margin="10 0 10 10"
+            ItemsSource="{Binding ProgrammingLanguages}"
+            DisplayMemberPath="Name"
+            SelectedValuePath="Id"
+            SelectedValue="{Binding Friend.ProgrammingLanguageId, Mode=TwoWay}"
+            />
+
+        <StackPanel Grid.Row="9"
                     Orientation="Horizontal"
                     >
             <Button Content="Save"
