--- a/src/Presentation/FriendsOrganizer.UI/Views/FriendDetailUserControl.xaml
+++ b/src/Presentation/FriendsOrganizer.UI/Views/FriendDetailUserControl.xaml
@@ -70,7 +70,38 @@
             SelectedValuePath="Id"
             SelectedValue="{Binding Friend.ProgrammingLanguageId, Mode=TwoWay}"
             />
-
+        <DockPanel
+            Grid.Row="8"
+            Margin="10">
+            <StackPanel
+                DockPanel.Dock="Right">
+                <Button 
+                    Content="Add" 
+                    Width="125"
+                    Margin="10"
+                    Command="{Binding AddFriendPhoneNumberCommand}"
+                    />
+                <Button 
+                    Content="Remove" 
+                    Width="125"
+                    Margin="10"
+                    Command="{Binding RemoveFriendPhoneNumberCommand}"
+                    />
+            </StackPanel>
+            <DataGrid
+                ItemsSource="{Binding PhoneNumbers}"
+                SelectedItem="{Binding SelectedPhoneNumber, Mode=TwoWay}"
+                AutoGenerateColumns="False"
+                RowHeaderWidth="0"
+                >
+                <DataGrid.Columns>
+                    <DataGridTextColumn 
+                        Header="Phone Numers" Width="*"
+                        Binding="{Binding Number, Mode=TwoWay ,UpdateSourceTrigger=PropertyChanged}"
+                        />
+                </DataGrid.Columns>
+            </DataGrid>
+        </DockPanel>
         <StackPanel Grid.Row="9"
                     Orientation="Horizontal"
                     >
