--- a/src/Presentation/FriendsOrganizer.UI/Views/MainWindow.xaml
+++ b/src/Presentation/FriendsOrganizer.UI/Views/MainWindow.xaml
@@ -8,8 +8,9 @@
         xmlns:viewModels="clr-namespace:FriendsOrganizer.UI.ViewModels"
         mc:Ignorable="d"
         Title="Friends Organizer" 
-        Height="450"
-        Width="600"
+        Height="700"
+        Width="1000"
+        WindowStartupLocation="CenterScreen"
         FontSize="20">
     <Window.Resources>
         <DataTemplate DataType="{x:Type viewModels:FriendDetailViewModel}">
