--- a/src/Presentation/FriendsOrganizer.UI/Views/MainWindow.xaml
+++ b/src/Presentation/FriendsOrganizer.UI/Views/MainWindow.xaml
@@ -16,6 +16,9 @@
         <DataTemplate DataType="{x:Type viewModels:FriendDetailViewModel}">
             <views:FriendDetailUserControl/>
         </DataTemplate>
+        <DataTemplate DataType="{x:Type viewModels:MeetingDetailViewModel}">
+            <views:MeetingDetailView/>
+        </DataTemplate>
     </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
