Settup Pick List

--- a/src/Presentation/FriendsOrganizer.UI/Views/MeetingDetailView.xaml
+++ b/src/Presentation/FriendsOrganizer.UI/Views/MeetingDetailView.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:FriendsOrganizer.UI.Views" 
              xmlns:toolkid="http://schemas.xceed.com/wpf/xaml/toolkit"
+             xmlns:model="clr-namespace:FriendsOrganizer.UI.Models"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
@@ -40,6 +41,42 @@
             Value="{Binding Meeting.EndAt, Mode=TwoWay, 
             UpdateSourceTrigger=PropertyChanged}"
             />
+
+        <Grid 
+            Grid.Row="6"
+            Margin="10">
+            <Grid.Resources>
+                <DataTemplate DataType="{x:Type model:FriendModel}">
+                    <TextBlock>
+                        <Run Text="{Binding FirstName}"/> <Run Text="{Binding LastName}"/>
+                    </TextBlock>
+                </DataTemplate>
+            </Grid.Resources>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+
+            <Label Content="Added Friend"/>
+            <ListView Grid.Row="1"
+                      ItemsSource="{Binding AddedFriends}"
+                      SelectedItem="{Binding SelectedAddedFried}"/>
+            <StackPanel Grid.Row="1" Grid.Column="1">
+                <Button Content="&lt;&lt;" Margin="10" Command="{Binding AddFriendCommand}"/>
+                <Button Content="&gt;&gt;" Margin="10 0 10 10" Command="{Binding RemoveFriendCommand}"/>
+            </StackPanel>
+
+            <Label Content="Availible Friend" Grid.Column="2"/>
+            <ListView Grid.Row="1"
+                      Grid.Column="2"
+                      ItemsSource="{Binding AvailibleFriends}"
+                      SelectedItem="{Binding SelectedAvailibleFried}"/>
+        </Grid>
 
         <StackPanel Grid.Row="7" Orientation="Horizontal">
             <Button Content="Save" Width="75" Margin="10" Command="{Binding SaveCommand}"/>
