--- a/src/Presentation/FriendsOrganizer.UI/App.xaml
+++ b/src/Presentation/FriendsOrganizer.UI/App.xaml
@@ -6,6 +6,7 @@
              DispatcherUnhandledException="Application_DispatcherUnhandledException"
              >
     <Application.Resources>
+        <BooleanToVisibilityConverter x:Key="booleanToVisabilityConverter"/>
         <Style TargetType="TextBox">
             <Setter Property="Validation.ErrorTemplate">
                 <Setter.Value>
