--- a/src/Presentation/FriendsOrganizer.UI/Views/MainWindow.xaml
+++ b/src/Presentation/FriendsOrganizer.UI/Views/MainWindow.xaml
@@ -49,10 +49,23 @@
         <views:NavigationUserControl 
             Grid.Row="1"
             DataContext="{Binding NavigationViewModel}"/>
-        <ContentControl
+        <TabControl
             Grid.Row="1"
             Grid.Column="1"
-            Content="{Binding DetailViewModel}"/>
-        
+            ItemsSource="{Binding DetailViewModels}"
+            SelectedItem="{Binding SelectedDetailViewModel,Mode=TwoWay}">
+            <TabControl.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="Title"/>
+                        <TextBlock Text="*"  
+                                   Visibility="{Binding HasChanges, 
+                            Converter={StaticResource booleanToVisabilityConverter}}" />
+                    </StackPanel>
+                </DataTemplate>
+            </TabControl.ItemTemplate>
+            
+        </TabControl>
+
     </Grid>
 </Window>
