--- a/src/Presentation/FriendsOrganizer.UI/Views/MainWindow.xaml
+++ b/src/Presentation/FriendsOrganizer.UI/Views/MainWindow.xaml
@@ -57,7 +57,7 @@
             <TabControl.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="Title"/>
+                        <TextBlock Text="{Binding Title}"/>
                         <TextBlock Text="*"  
                                    Visibility="{Binding HasChanges, 
                             Converter={StaticResource booleanToVisabilityConverter}}" />
