--- a/src/Presentation/FriendsOrganizer.UI/App.xaml
+++ b/src/Presentation/FriendsOrganizer.UI/App.xaml
@@ -6,84 +6,98 @@
              DispatcherUnhandledException="Application_DispatcherUnhandledException"
              >
     <Application.Resources>
-        <BooleanToVisibilityConverter x:Key="booleanToVisabilityConverter"/>
-        <Style TargetType="TextBox">
-            <Setter Property="Validation.ErrorTemplate">
-                <Setter.Value>
-                    <ControlTemplate>
-                        <StackPanel>
-                            <AdornedElementPlaceholder x:Name="placeholder"/>
-                            <TextBlock FontSize="12"
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary>
+                    <BooleanToVisibilityConverter x:Key="booleanToVisabilityConverter"/>
+                    <Style TargetType="TextBox">
+                        <Setter Property="Validation.ErrorTemplate">
+                            <Setter.Value>
+                                <ControlTemplate>
+                                    <StackPanel>
+                                        <AdornedElementPlaceholder x:Name="placeholder"/>
+                                        <TextBlock FontSize="12"
                                        Foreground="Red"
                                        Text="{Binding ElementName=placeholder,
                                         Path=AdornedElement.(Validation.Errors)[0].ErrorContent}"/>
-                        </StackPanel>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-            <Style.Triggers>
-                <Trigger Property="Validation.HasError" Value="True">
-                    <Setter Property="Background" Value="Red"/>
-                    <Setter 
+                                    </StackPanel>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                        <Style.Triggers>
+                            <Trigger Property="Validation.HasError" Value="True">
+                                <Setter Property="Background" Value="Red"/>
+                                <Setter 
                         Property="ToolTip" 
                         Value="{Binding 
                             RelativeSource={RelativeSource Self},
                             Path=(Validation.Errors)[0].ErrorContent}" />
-                </Trigger>
-            </Style.Triggers>
-        </Style>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
 
-        <Style x:Key="DataGridColumnStyle" TargetType="TextBlock">
-            <Setter Property="Validation.ErrorTemplate">
-                <Setter.Value>
-                    <ControlTemplate>
-                        <StackPanel>
-                            <AdornedElementPlaceholder x:Name="placeholder"/>
-                            <TextBlock FontSize="12"
+                    <Style x:Key="DataGridColumnStyle" TargetType="TextBlock">
+                        <Setter Property="Validation.ErrorTemplate">
+                            <Setter.Value>
+                                <ControlTemplate>
+                                    <StackPanel>
+                                        <AdornedElementPlaceholder x:Name="placeholder"/>
+                                        <TextBlock FontSize="12"
                                        Foreground="Red"
                                        Text="{Binding ElementName=placeholder,
                                         Path=AdornedElement.(Validation.Errors)[0].ErrorContent}"/>
-                        </StackPanel>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-            <Style.Triggers>
-                <Trigger Property="Validation.HasError" Value="True">
-                    <Setter Property="Background" Value="Red"/>
-                    <Setter 
+                                    </StackPanel>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                        <Style.Triggers>
+                            <Trigger Property="Validation.HasError" Value="True">
+                                <Setter Property="Background" Value="Red"/>
+                                <Setter 
                         Property="ToolTip" 
                         Value="{Binding 
                             RelativeSource={RelativeSource Self},
                             Path=(Validation.Errors)[0].ErrorContent}" />
-                </Trigger>
-            </Style.Triggers>
-        </Style>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
 
-        <Style x:Key="DataGridEditingColumnStyle" TargetType="TextBox">
-            <Setter Property="Validation.ErrorTemplate">
-                <Setter.Value>
-                    <ControlTemplate>
-                        <StackPanel>
-                            <AdornedElementPlaceholder x:Name="placeholder"/>
-                            <TextBlock FontSize="12"
+                    <Style x:Key="DataGridEditingColumnStyle" TargetType="TextBox">
+                        <Setter Property="Validation.ErrorTemplate">
+                            <Setter.Value>
+                                <ControlTemplate>
+                                    <StackPanel>
+                                        <AdornedElementPlaceholder x:Name="placeholder"/>
+                                        <TextBlock FontSize="12"
                                        Foreground="Red"
                                        Text="{Binding ElementName=placeholder,
                                         Path=AdornedElement.(Validation.Errors)[0].ErrorContent}"/>
-                        </StackPanel>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-            <Style.Triggers>
-                <Trigger Property="Validation.HasError" Value="True">
-                    <Setter Property="Background" Value="Red"/>
-                    <Setter 
+                                    </StackPanel>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                        <Style.Triggers>
+                            <Trigger Property="Validation.HasError" Value="True">
+                                <Setter Property="Background" Value="Red"/>
+                                <Setter 
                         Property="ToolTip" 
                         Value="{Binding 
                             RelativeSource={RelativeSource Self},
                             Path=(Validation.Errors)[0].ErrorContent}" />
-                </Trigger>
-            </Style.Triggers>
-        </Style>
-        
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </ResourceDictionary>
+                <ResourceDictionary>
+                    <ResourceDictionary.MergedDictionaries>
+                        <!-- MahApps.Metro resource dictionaries. Make sure that all file names are Case Sensitive! -->
+                        <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
+                        <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
+                        <!-- Theme setting -->
+                        <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Themes/Dark.Blue.xaml" />
+                    </ResourceDictionary.MergedDictionaries>
+                </ResourceDictionary>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
