--- a/src/Presentation/FriendsOrganizer.UI/Views/MainWindow.xaml
+++ b/src/Presentation/FriendsOrganizer.UI/Views/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="FriendsOrganizer.UI.Views.MainWindow"
+﻿<mah:MetroWindow x:Class="FriendsOrganizer.UI.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:FriendsOrganizer.UI.Views"
         xmlns:views="clr-namespace:FriendsOrganizer.UI.Views"
         xmlns:viewModels="clr-namespace:FriendsOrganizer.UI.ViewModels"
+        xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         mc:Ignorable="d"
         Title="Friends Organizer" 
         Height="700"
@@ -80,4 +81,4 @@
         </TabControl>
 
     </Grid>
-</Window>
+</mah:MetroWindow>
