--- a/src/Presentation/FriendsOrganizer.UI/Views/MainWindow.xaml
+++ b/src/Presentation/FriendsOrganizer.UI/Views/MainWindow.xaml
@@ -62,6 +62,18 @@
             Grid.Column="1"
             ItemsSource="{Binding DetailViewModels}"
             SelectedItem="{Binding SelectedDetailViewModel,Mode=TwoWay}">
+            <TabControl.ItemContainerStyle>
+                <Style 
+                    TargetType="TabItem"
+                    BasedOn="{StaticResource {x:Type TabItem}}"
+                    >
+
+                    <Setter Property="Background" Value="#333333"/>
+                    <Setter Property="BorderBrush" Value="Transparent"/>
+                    <Setter Property="BorderThickness" Value="2"/>
+                </Style>
+
+            </TabControl.ItemContainerStyle>
             <TabControl.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
@@ -70,9 +82,10 @@
                                    Visibility="{Binding HasChanges, 
                             Converter={StaticResource booleanToVisabilityConverter}}" />
                         <Button Command="{Binding CloseCommand}"
+                                Style="{StaticResource MahApps.Styles.Button.Chromeless}"
                                 VerticalContentAlignment="Top"
-                                Margin="2"
-                                Content="x"
+                                Margin="2 0 2 0"
+                                Content="X"
                                 FontSize="20"/>
                     </StackPanel>
                 </DataTemplate>
