--- a/src/Presentation/FriendsOrganizer.UI/App.xaml
+++ b/src/Presentation/FriendsOrganizer.UI/App.xaml
@@ -6,18 +6,21 @@
              DispatcherUnhandledException="Application_DispatcherUnhandledException"
              >
     <Application.Resources>
+
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+               
                 <ResourceDictionary>
                     <BooleanToVisibilityConverter x:Key="booleanToVisabilityConverter"/>
-                    <Style TargetType="TextBox">
+                    <Style TargetType="TextBox" BasedOn="{StaticResource {x:Type TextBox}}">
+                        <Setter Property="FontSize" Value="20"/>
                         <Setter Property="Validation.ErrorTemplate">
                             <Setter.Value>
                                 <ControlTemplate>
                                     <StackPanel>
                                         <AdornedElementPlaceholder x:Name="placeholder"/>
                                         <TextBlock FontSize="12"
-                                       Foreground="Red"
+                                       Foreground="White"
                                        Text="{Binding ElementName=placeholder,
                                         Path=AdornedElement.(Validation.Errors)[0].ErrorContent}"/>
                                     </StackPanel>
@@ -52,7 +55,7 @@
                         </Setter>
                         <Style.Triggers>
                             <Trigger Property="Validation.HasError" Value="True">
-                                <Setter Property="Background" Value="Red"/>
+                                <Setter Property="Background" Value="DarkRed"/>
                                 <Setter 
                         Property="ToolTip" 
                         Value="{Binding 
@@ -69,7 +72,7 @@
                                     <StackPanel>
                                         <AdornedElementPlaceholder x:Name="placeholder"/>
                                         <TextBlock FontSize="12"
-                                       Foreground="Red"
+                                       Foreground="White"
                                        Text="{Binding ElementName=placeholder,
                                         Path=AdornedElement.(Validation.Errors)[0].ErrorContent}"/>
                                     </StackPanel>
@@ -78,7 +81,7 @@
                         </Setter>
                         <Style.Triggers>
                             <Trigger Property="Validation.HasError" Value="True">
-                                <Setter Property="Background" Value="Red"/>
+                                <Setter Property="Background" Value="DarkRed"/>
                                 <Setter 
                         Property="ToolTip" 
                         Value="{Binding 
@@ -96,6 +99,20 @@
                         <!-- Theme setting -->
                         <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Themes/Dark.Blue.xaml" />
                     </ResourceDictionary.MergedDictionaries>
+                </ResourceDictionary>
+                <ResourceDictionary>
+                    <Style TargetType="Button" 
+                           BasedOn="{StaticResource {x:Type Button}}">
+                        <Setter Property="FontSize" Value="16"/>
+                    </Style>
+                    <Style TargetType="ComboBox" 
+                           BasedOn="{StaticResource {x:Type ComboBox}}">
+                        <Setter Property="FontSize" Value="20"/>
+                    </Style>
+                    <Style TargetType="Label" 
+                           BasedOn="{StaticResource {x:Type Label}}">
+                        <Setter Property="Foreground" Value="#CCCCCC"/>
+                    </Style>
                 </ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
